# Credex

./: .gitignore  Anchor.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  HOW.md  IMPLEMENTATION_STATUS.md  LICENSE  MANUAL_TESTING_GUIDE.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_DEPLOYMENT_COMPLETE.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  TASK_10_COMPLETION_SUMMARY.md  UI_INTEGRATION_COMPLETE.md  UI_INTEGRATION_PROGRESS.md  VERCEL_DASHBOARD_DEPLOYMENT.md  VERCEL_DEPLOYMENT_INTERACTIVE.md  VOUCH_INTEGRATION_COMPLETE.md  package.json  vercel.json
.kiro/specs/coldstart-por-protocol-upgrade/: .config.kiro  design.md  requirements.md  tasks.md
apps/mobile/: package.json  tsconfig.json
apps/mobile/src/components/: SplashScreen.jsx
apps/web/: INTEGRATION_GUIDE.md  extract_pdf.js  index.html  logs.txt  package.json  react-router.config.ts  vercel.json  vite.config.ts
apps/web/__create/: index.ts  route-builder.ts
apps/web/public/: index.html
apps/web/scripts/: generate-index.js
apps/web/src/__create/: empty-module.js  ledger-errors-stub.js
apps/web/src/app/: page.jsx  root.tsx  test-page.jsx
apps/web/src/chain/: README.md  accounts.ts  index.ts  instructions.ts  merkle.ts  program.ts  types.ts  utils.ts  wallet-provider.tsx
apps/web/src/components/: activity.jsx  home.jsx  merit.jsx  reputation.jsx  splash.jsx  vouch.jsx  (+1 more)
docs/: benchmarks.md
programs/coldstart_por/: Cargo.toml
programs/coldstart_por/src/: lib.rs
scripts/: benchmark.ts  deploy-devnet.ps1  deploy-devnet.sh  simulate-network.ts
tests/: coldstart_por.ts
(+26 files in other folders)
